tests/error/vararg_invalid_acces.gw
#! [contains] InvalidVariadicAccess
fun void test(...) {
  vararg.start;
  <<<vararg $ int >>>;
  vararg.end;
}
new Object => test;
